--- a/custom/roles/internal/dotfiles/tasks/main.yml
+++ b/custom/roles/internal/dotfiles/tasks/main.yml
@@ -34,5 +34,5 @@
 - name: Set git remote URL to SSH
   shell: git remote set-url origin {{ dotfiles_repo_ssh }}
   args:
-    chdir: "{{ dotfiles_dir }}"
+    chdir: "{{ dotfiles_repo_local_destination }}"
     warn: false
