--- a/custom/config.yml
+++ b/custom/config.yml
@@ -46,8 +46,8 @@ projects_client:
 
 # Dotfiles
 # --------------------------------------------------------------------------
-dotfiles_repo: https://gitlab.com/gperdomor/dotfiles.git
-dotfiles_repo_ssh: git@gitlab.com:gperdomor/dotfiles.git
+dotfiles_repo: https://github.com/gperdomor/dotfiles.git
+dotfiles_repo_ssh: git@github.com:gperdomor/dotfiles.git
 dotfiles_repo_accept_hostkey: yes
 dotfiles_repo_local_destination: ~/.dotfiles
 dotfiles_files:
