--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -10,7 +10,7 @@
     # - { role: macos, tags: "macos" }
     - { role: ssh, tags: ["ssh", "no_ci"] }
     - { role: terminal, tags: ["terminal"] }
-    - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
+    # - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
     - { role: vscode, tags: ["vscode"] }
     # TODO CHECK THIS
     # - { cask_app_name: "dropbox", tags: "dropbox", role: danbohea.cask-app }
