--- a/starter_files/mac.yml
+++ b/starter_files/mac.yml
@@ -7,7 +7,6 @@
     - config.local.yml
 
   roles:
-
     # --------------------------------------------------------------------------
 
     # Requiring roles
@@ -33,41 +32,30 @@
     # --------------------------------------------------------------------------
 
     # Basic role example.
-    - {
-      role: danbohea.macos-spelling,
-      tags: ["spelling"]
-      }
+    - { role: danbohea.macos-spelling, tags: ["spelling"] }
 
     # Passing a variable to a role.
     - {
-      role: danbohea.cask-app,
-      cask_app_name: "appcleaner",
-      tags: ["appcleaner"] }
+        role: danbohea.cask-app,
+        cask_app_name: "appcleaner",
+        tags: ["appcleaner"],
+      }
 
     # Using the "always" tag on a role to ensure it always runs,
     # no matter what tags you instructed Ansible to run.
-    - {
-      role: danbohea.macos-dock,
-      tags: ["always", "dock"]
-      }
+    - { role: danbohea.macos-dock, tags: ["always", "dock"] }
 
     # --------------------------------------------------------------------------
-
     #  More info on the example roles used here:
-
     # https://github.com/danbohea/ansible-role-macos-spelling
     # https://github.com/danbohea/ansible-role-cask-app
     # https://github.com/danbohea/ansible-role-macos-dock
-
     # You can find further compatible roles via the Ansible Galaxy website.
     # Here's a good starting point:
-
     # https://galaxy.ansible.com/list#/roles?page=1&page_size=20&users=danbohea&autocomplete=macsible&order=name,username
-
     # --------------------------------------------------------------------------
 
   post_tasks:
-
     - debug:
         msg: "Some changes may not take effect until you've restarted your Mac."
       tags: always
