--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -2,59 +2,30 @@
 - name: Custom - Mac
   hosts: localhost
 
-  vars_files:
-    - config.yml
-    - config.local.yml
+# Setup that would be beneficial to have in place ASAP.
+- import_playbook: mac--first.yml
+  tags: "mac__first"
+  # # Essential day-to-day.
+  # - import_playbook: mac--day-to-day.yml
+  #   tags: "mac__day_to_day"
 
-  roles:
-    # --------------------------------------------------------------------------
+  # # Essential dev.
+  # - import_playbook: mac--dev.yml
+  #   tags: "mac__dev"
 
-    # Requiring roles
-    # ---------------
+  # # Project work.
+  # - import_playbook: mac--projects.yml
+  #   tags: ["mac__projects", "no_ci"]
 
-    # The roles below are included in requirements.yml.
-    # "Required" roles are downloaded from remote sources.
+  # # Remaining setup.
+  # - import_playbook: mac--remaining.yml
+  #   tags: ["mac__remaining", "no_ci"]
 
-    # Ansible Galaxy docs:
-    # http://docs.ansible.com/ansible/latest/galaxy.html
+  # # Setup that really must be run last.
+  # - import_playbook: mac--last.yml
+  #   tags: ["mac__last", "always"]
 
-    # --------------------------------------------------------------------------
-
-    # Using tags
-    # ----------
-
-    # Each role has a unique & descriptive tag so that specific roles can be
-    # run via the `ansible-playbook` command.
-
-    # Ansible tags docs:
-    # http://docs.ansible.com/ansible/latest/playbooks_tags.html
-
-    # --------------------------------------------------------------------------
-
-    # Basic role example.
-    # - { role: danbohea.macos-spelling, tags: ["spelling"] }
-
-    # Passing a variable to a role.
-    - {
-        role: danbohea.cask-app,
-        cask_app_name: "appcleaner",
-        tags: ["appcleaner"],
-      }
-
-    # Using the "always" tag on a role to ensure it always runs,
-    # no matter what tags you instructed Ansible to run.
-    # - { role: danbohea.macos-dock, tags: ["always", "dock"] }
-    # --------------------------------------------------------------------------
-    #  More info on the example roles used here:
-    # https://github.com/danbohea/ansible-role-macos-spelling
-    # https://github.com/danbohea/ansible-role-cask-app
-    # https://github.com/danbohea/ansible-role-macos-dock
-    # You can find further compatible roles via the Ansible Galaxy website.
-    # Here's a good starting point:
-    # https://galaxy.ansible.com/list#/roles?page=1&page_size=20&users=danbohea&autocomplete=macsible&order=name,username
-    # --------------------------------------------------------------------------
-
-  post_tasks:
-    - debug:
-        msg: "Some changes may not take effect until you've restarted your Mac."
-      tags: always
+  # post_tasks:
+  #   - debug:
+  #       msg: "Some changes may not take effect until you've restarted your Mac."
+  #     tags: always
