--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -7,8 +7,21 @@
     - config.local.yml
 
   roles:
+    # - { role: macos, tags: "macos" }
+
     - { role: ssh, tags: ["ssh", "no_ci"] }
+
     - { role: terminal, tags: ["terminal"] }
+
     - { role: vscode, tags: ["vscode"] }
+
+    - role: mas
+      tags: ["mas", "no_ci"]
+      mas_installed_apps:
+        - { name: "1Password 7", id: 1333542190 }
+
+    # - { cask_app_name: "dropbox", tags: "dropbox", role: danbohea.cask-app }
+
+    # - { cask_app_name: "gpg-suite", tags: "gpg-suite", role: danbohea.cask-app }
+
     - { cask_app_name: "google-chrome", tags: "google-chrome", role: danbohea.cask-app }
-    - { cask_app_name: "gpg-suite", tags: "gpg-suite", role: danbohea.cask-app }
