--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -5,10 +5,10 @@
 # Setup that would be beneficial to have in place ASAP.
 - import_playbook: mac--first.yml
   tags: "mac__first"
-  # # Essential day-to-day.
-  # - import_playbook: mac--day-to-day.yml
-  #   tags: "mac__day_to_day"
 
+# Essential day-to-day.
+- import_playbook: mac--day-to-day.yml
+  tags: "mac__day_to_day"
   # # Essential dev.
   # - import_playbook: mac--dev.yml
   #   tags: "mac__dev"
