--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -9,10 +9,10 @@
 # Essential day-to-day.
 - import_playbook: mac--day-to-day.yml
   tags: "mac__day_to_day"
-  # # Essential dev.
-  # - import_playbook: mac--dev.yml
-  #   tags: "mac__dev"
 
+# Essential dev.
+- import_playbook: mac--dev.yml
+  tags: "mac__dev"
   # # Project work.
   # - import_playbook: mac--projects.yml
   #   tags: ["mac__projects", "no_ci"]
