--- a/custom/mac--dev.yml
+++ b/custom/mac--dev.yml
@@ -10,3 +10,30 @@
     - { role: git, tags: "git" }
 
     - { role: node, tags: "node" }
+
+    - { cask_app_name: "araxis-merge", tags: "araxis-merge", role: danbohea.cask-app }
+
+    # - { cask_app_name: "kaleidoscope", tags: "kaleidoscope", role: danbohea.cask-app }
+
+    - { cask_app_name: "p4v", tags: "p4v", role: danbohea.cask-app }
+
+    - { role: tower, tags: "tower" }
+
+    - role: mas
+      tags: ["mas", "no_ci"]
+      mas_installed_apps:
+        - { name: "Xcode", id: 497799835 }
+        - { name: "Slack", id: 803453959 }
+
+    - { brew_pkg_name: "diff-so-fancy", tags: "diff-so-fancy", role: brew_pkg }
+    # - { brew_pkg_name: "heroku", tags: "heroku", role: brew_pkg }
+    - { brew_pkg_name: "httpie", tags: "httpie", role: brew_pkg }
+    - { cask_app_name: "adoptopenjdk8", tags: "adoptopenjdk8", role: danbohea.cask-app }
+    - { cask_app_name: "discord", tags: "discord", role: danbohea.cask-app }
+    # - { cask_app_name: "figma", tags: "figma", role: danbohea.cask-app }
+    # - { cask_app_name: "imageoptim", tags: "imageoptim", role: danbohea.cask-app }
+    # - { cask_app_name: "parallels", tags: "parallels", role: danbohea.cask-app }
+    - { cask_app_name: "tableplus", tags: "tableplus", role: danbohea.cask-app }
+    # - { cask_app_name: "vagrant", tags: "vagrant", role: danbohea.cask-app }
+    # - { cask_app_name: "vmware-fusion", tags: "vmware-fusion", role: danbohea.cask-app }
+    - { cask_app_name: "xscope", tags: "xscope", role: danbohea.cask-app }
