add projects tasks

--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -13,10 +13,10 @@
 # Essential dev.
 - import_playbook: mac--dev.yml
   tags: "mac__dev"
-  # # Project work.
-  # - import_playbook: mac--projects.yml
-  #   tags: ["mac__projects", "no_ci"]
 
+# Project work.
+- import_playbook: mac--projects.yml
+  tags: ["mac__projects", "no_ci"]
   # # Remaining setup.
   # - import_playbook: mac--remaining.yml
   #   tags: ["mac__remaining", "no_ci"]
