--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -8,11 +8,8 @@
 
   roles:
     # - { role: macos, tags: "macos" }
-
     - { role: ssh, tags: ["ssh", "no_ci"] }
-
     - { role: terminal, tags: ["terminal"] }
-
     - { role: vscode, tags: ["vscode"] }
 
     - role: mas
@@ -21,7 +18,5 @@
         - { name: "1Password 7", id: 1333542190 }
 
     # - { cask_app_name: "dropbox", tags: "dropbox", role: danbohea.cask-app }
-
-    # - { cask_app_name: "gpg-suite", tags: "gpg-suite", role: danbohea.cask-app }
-
     - { cask_app_name: "google-chrome", tags: "google-chrome", role: danbohea.cask-app }
+    - { cask_app_name: "gpg-suite", tags: "gpg-suite", role: danbohea.cask-app }
