--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -17,15 +17,11 @@
 # Project work.
 - import_playbook: mac--projects.yml
   tags: ["mac__projects", "no_ci"]
-  # # Remaining setup.
-  # - import_playbook: mac--remaining.yml
-  #   tags: ["mac__remaining", "no_ci"]
 
-  # # Setup that really must be run last.
-  # - import_playbook: mac--last.yml
-  #   tags: ["mac__last", "always"]
+# Remaining setup.
+- import_playbook: mac--remaining.yml
+  tags: ["mac__remaining", "no_ci"]
 
-  # post_tasks:
-  #   - debug:
-  #       msg: "Some changes may not take effect until you've restarted your Mac."
-  #     tags: always
+# Setup that really must be run last.
+- import_playbook: mac--last.yml
+  tags: ["mac__last", "always"]
