--- a/custom/roles/internal/node/tasks/main.yml
+++ b/custom/roles/internal/node/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Install nvm
   shell: >
-    curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.0/install.sh | bash
   args:
     executable: /bin/bash
     chdir: "{{ ansible_env.HOME }}"
