--- a/custom/roles/internal/ssh/tasks/main.yml
+++ b/custom/roles/internal/ssh/tasks/main.yml
@@ -18,3 +18,36 @@
     name: "{{ item.host }}"
     key: "{{ item.key }}"
   with_items: "{{ ssh_known_hosts }}"
+
+- name: Generate ssh keys
+  user:
+    name: "{{ansible_user}}"
+    generate_ssh_key: yes
+    ssh_key_bits: 4096
+    ssh_key_passphrase: "{{item.passphrase}}"
+    ssh_key_file: ".ssh/{{item.name}}"
+    ssh_key_type: "{{ item.type | default('rsa')}}"
+  with_items: "{{ ssh_keys }}"
+
+- name: Add {{item.host}} ssh config into config file
+  blockinfile:
+    dest: ~/.ssh/config
+    create: yes
+    backup: yes
+    marker: "# {mark} {{ item.name }}"
+    content: |
+      Host {{item.host}}
+       AddKeysToAgent yes
+       UseKeychain yes
+       IdentityFile ~/.ssh/{{item.name}}
+  with_items: "{{ ssh_keys }}"
+
+- name: Enable ssh agent
+  shell: eval `ssh-agent -s`
+
+- name: Add ssh private keys to ssh agent
+  expect:
+    command: "ssh-add -K /Users/{{ansible_user}}/.ssh/{{item.name}}"
+    responses:
+      (?i)Enter passphrase: "{{item.passphrase}}"
+  with_items: "{{ ssh_keys }}"
