--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Install dependencies
         run: ansible-galaxy install -r custom/requirements.yml --force
       - name: Checking the role/playbook's syntax
-        run: ansible-playbook macsible.yml --syntax-check
+        run: ansible-playbook playbook.yml --syntax-check
       - name: Run playbook
-        run: ansible-playbook macsible.yml --skip-tags "no_ci, node"
+        run: ansible-playbook playbook.yml --skip-tags "no_ci, node"
