--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
-name: CI
+name: Tests
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   tests:
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, macOS-10.14]
+        os: [macOS-latest]
 
     steps:
       - uses: actions/checkout@v1
@@ -19,6 +19,6 @@ jobs:
       - name: Create config.local file
         run: touch custom/config.local.yml
       - name: Checking the role/playbook's syntax
-        run: ansible-playbook custom/mac.yml --syntax-check
+        run: ansible-playbook playbook.yml --syntax-check
       - name: Run playbook
-        run: ansible-playbook custom/mac.yml --skip-tags "mas,no_ci"
+        run: ansible-playbook playbook.yml --skip-tags "no_ci, node"
