--- a/custom/roles/internal/dotfiles/defaults/main.yml
+++ b/custom/roles/internal/dotfiles/defaults/main.yml
@@ -3,7 +3,7 @@ dotfiles_repo: https://github.com/gperdomor/dotfiles.git
 dotfiles_repo_ssh: git@github.com:gperdomor/dotfiles.git
 
 dotfiles_repo_version: master
-dotfiles_repo_accept_hostkey: false
+dotfiles_repo_accept_hostkey: yes
 dotfiles_repo_local_destination: ~/.dotfiles
 dotfiles_home: "~"
 dotfiles_files:
