--- a/custom/mac--dev.yml
+++ b/custom/mac--dev.yml
@@ -23,8 +23,8 @@
     - { brew_pkg_name: "diff-so-fancy", tags: "diff-so-fancy", role: brew_pkg }
     # - { brew_pkg_name: "heroku", tags: "heroku", role: brew_pkg }
     - { brew_pkg_name: "httpie", tags: "httpie", role: brew_pkg }
-    - { cask_app_name: "adoptopenjdk8", tags: "adoptopenjdk8", role: danbohea.cask-app }
-    - { cask_app_name: "discord", tags: "discord", role: danbohea.cask-app }
+    - { cask_app_name: "adoptopenjdk8", tags: ["adoptopenjdk8", "no_ci"], role: danbohea.cask-app }
+    # - { cask_app_name: "discord", tags: "discord", role: danbohea.cask-app }
     # - { cask_app_name: "figma", tags: "figma", role: danbohea.cask-app }
     # - { cask_app_name: "imageoptim", tags: "imageoptim", role: danbohea.cask-app }
     # - { cask_app_name: "parallels", tags: ["parallels", "no_ci"], role: danbohea.cask-app }
