--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,23 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install dependencies.
         run: bash scripts/install_deps.sh
+      - run: |
+          echo '[defaults]' >> ansible.cfg
+          echo 'roles_path = ../' >> ansible.cfg
+      - run: sudo mkdir -p /etc/ansible
+      - run: sudo touch /etc/ansible/hosts
+      - run: echo -e '[local]\nlocalhost ansible_connection=local' | sudo tee -a /etc/ansible/hosts > /dev/null
       - name: Install dependencies
-        run: ansible-galaxy install -r custom/requirements.yml --force
-      - name: Create config.local file
-        run: touch custom/config.local.yml
+        run: ansible-galaxy install -r requirements.yml --force
       - name: Checking the role/playbook's syntax
         run: ansible-playbook playbook.yml --syntax-check
+      - name: Copy test config.yml into place
+        run: cp tests/config.yml config.yml
       - name: Run playbook
-        run: ansible-playbook playbook.yml --skip-tags "no_ci, node"
+        run: ansible-playbook playbook.yml
+        # run: ansible-playbook --extra-vars '{\"configure_sudoers\":\"false\"}' playbook.yml"
+      - name: Test the playbook's idempotence
+        run: |
+          idempotence=$(mktemp)
+          ansible-playbook playbook.yml | tee -a ${idempotence}
+          tail ${idempotence} | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)
