--- a/playbook.yml
+++ b/playbook.yml
@@ -1,26 +1,44 @@
 ---
-# Do not customise this file.
+- hosts: all
+  connection: local
 
-- name: macOS-ansible
-  hosts: all
+  vars_files:
+    - default.config.yml
 
   pre_tasks:
-    - block:
-        - name: Verify Ansible version.
-          assert:
-            that: "ansible_version.full is version_compare('2.4', '>=')"
-            msg: "You must update Ansible to at least 2.4 to use this version of macOS-ansible."
+    - include_vars: "{{ item }}"
+      with_fileglob:
+        - "{{ playbook_dir }}/config.yml"
+      tags: ["always"]
 
-        - name: Verify target system is running macOS.
-          assert:
-            that: "ansible_distribution == 'MacOSX'"
-            msg: "The target system is not running macOS."
+  roles:
+    - role: geerlingguy.homebrew
+      tags: ["homebrew"]
+    - role: geerlingguy.dotfiles
+      when: configure_dotfiles
+      tags: ["dotfiles"]
+    - role: geerlingguy.mas
+      when: mas_installed_apps
+      tags: ["mas"]
 
-        - name: Verify macOS version.
-          assert:
-            that: "ansible_distribution_version is version_compare('10.12', '>=')"
-            msg: "The target system must be running macOS 10.12 or higher to use this version of macOS-ansible."
+  tasks:
+    - include_tasks: tasks/ansible-setup.yml
 
-      tags: always
+    # - include_tasks: tasks/sudoers.yml
+    #   when: configure_sudoers
 
-- import_playbook: custom/mac.yml
+    # - include_tasks: tasks/terminal.yml
+    #   when: configure_terminal
+
+    # - include_tasks: tasks/osx.yml
+    #   when: configure_osx
+    #   tags: ["osx"]
+
+    - include_tasks: tasks/extra-packages.yml
+      tags: ["extra-packages"]
+
+    - name: Run configured post-provision ansible task files.
+      include_tasks: "{{ outer_item }}"
+      loop_control:
+        loop_var: outer_item
+      with_fileglob: "{{ post_provision_tasks|default(omit) }}"
