--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-roles_path = ./roles:/etc/ansible/roles
+roles_path = custom/roles/external:custom/roles/internal:/etc/ansible/roles
 
 [ssh_connection]
 pipelining = True
