--- a/playbook.yml
+++ b/playbook.yml
@@ -6,12 +6,30 @@
     - default.config.yml
 
   pre_tasks:
-    - include_vars: "{{ item }}"
-      with_fileglob:
-        - "{{ playbook_dir }}/config.yml"
+    - block:
+        - name: Verify Ansible version.
+          assert:
+            that: "ansible_version.full is version_compare('2.4', '>=')"
+            msg: "You must update Ansible to at least 2.4 to use this version of macOS-ansible."
+
+        - name: Verify target system is running macOS.
+          assert:
+            that: "ansible_distribution == 'MacOSX'"
+            msg: "The target system is not running macOS."
+
+        - name: Verify macOS version.
+          assert:
+            that: "ansible_distribution_version is version_compare('10.12', '>=')"
+            msg: "The target system must be running macOS 10.12 or higher to use this version of macOS-ansible."
+
+        - include_vars: "{{ item }}"
+          with_fileglob:
+            - "{{ playbook_dir }}/config.yml"
       tags: ["always"]
 
   roles:
+    - role: terminal
+      tags: ["terminal"]
     - role: geerlingguy.homebrew
       tags: ["homebrew"]
     - role: geerlingguy.dotfiles
@@ -23,12 +41,6 @@
 
   tasks:
     - include_tasks: tasks/ansible-setup.yml
-
-    # - include_tasks: tasks/sudoers.yml
-    #   when: configure_sudoers
-
-    # - include_tasks: tasks/terminal.yml
-    #   when: configure_terminal
 
     # - include_tasks: tasks/osx.yml
     #   when: configure_osx
