--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -10,7 +10,6 @@
     # - { role: macos, tags: "macos" }
     - { role: ssh, tags: ["ssh", "no_ci"] }
     - { role: terminal, tags: ["terminal"] }
-    - { role: vscode, tags: ["vscode"] }
 
     - role: mas
       tags: ["mas", "no_ci"]
@@ -20,3 +19,4 @@
     # - { cask_app_name: "dropbox", tags: "dropbox", role: danbohea.cask-app }
     - { cask_app_name: "google-chrome", tags: "google-chrome", role: danbohea.cask-app }
     - { cask_app_name: "gpg-suite", tags: "gpg-suite", role: danbohea.cask-app }
+    - { cask_app_name: "visual-studio-code", tags: "visual-studio-code", role: danbohea.cask-app }
