--- a/custom/mac--dev.yml
+++ b/custom/mac--dev.yml
@@ -7,8 +7,8 @@
     - config.local.yml
 
   roles:
-    - { role: git, tags: "git" }
-    - { role: node, tags: "node" }
+    - { brew_pkg_name: "git", tags: "git", role: brew_pkg }
+    - { brew_pkg_name: "node", tags: "node", role: brew_pkg }
     - { cask_app_name: "araxis-merge", tags: "araxis-merge", role: danbohea.cask-app }
     # - { cask_app_name: "kaleidoscope", tags: "kaleidoscope", role: danbohea.cask-app }
     - { cask_app_name: "p4v", tags: "p4v", role: danbohea.cask-app }
