--- a/tasks/post/projects.yml
+++ b/tasks/post/projects.yml
@@ -14,15 +14,14 @@
     accept_hostkey: yes
     version: master
   with_items: "{{ projects_oss }}"
-  changed_when: false
 
-- name: Set git remote URL to SSH on oss projects
-  shell: git remote set-url origin {{ item.repo_ssh }}
-  with_items: "{{ projects_oss }}"
-  args:
-    chdir: "~/Developer/oss/{{ item.dest }}"
-    warn: false
-  changed_when: false
+# - name: Set git remote URL to SSH on oss projects
+#   shell: git remote set-url origin {{ item.repo_ssh }}
+#   with_items: "{{ projects_oss }}"
+#   args:
+#     chdir: "~/Developer/oss/{{ item.dest }}"
+#     warn: false
+#   changed_when: false
 
 # Internal projects
 
@@ -33,15 +32,14 @@
     accept_hostkey: yes
     version: master
   with_items: "{{ projects_internal }}"
-  changed_when: false
 
-- name: Set git remote URL to SSH on internal projects
-  shell: git remote set-url origin {{ item.repo_ssh }}
-  with_items: "{{ projects_internal }}"
-  args:
-    chdir: "~/Developer/internal/{{ item.dest }}"
-    warn: false
-  changed_when: false
+# - name: Set git remote URL to SSH on internal projects
+#   shell: git remote set-url origin {{ item.repo_ssh }}
+#   with_items: "{{ projects_internal }}"
+#   args:
+#     chdir: "~/Developer/internal/{{ item.dest }}"
+#     warn: false
+#   changed_when: false
 
 # Client projects
 
@@ -52,12 +50,10 @@
     accept_hostkey: yes
     version: master
   with_items: "{{ projects_client }}"
-  changed_when: false
-
-- name: Set git remote URL to SSH  on client projects
-  shell: git remote set-url origin {{ item.repo_ssh }}
-  with_items: "{{ projects_client }}"
-  args:
-    chdir: "~/Developer/client/{{ item.dest }}"
-    warn: false
-  changed_when: false
+# - name: Set git remote URL to SSH  on client projects
+#   shell: git remote set-url origin {{ item.repo_ssh }}
+#   with_items: "{{ projects_client }}"
+#   args:
+#     chdir: "~/Developer/client/{{ item.dest }}"
+#     warn: false
+#   changed_when: false
