Simplify workflow tasks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-gathering = smart
-inventory = ./custom/inventory.yml
-log_path = ./ansible.log
-roles_path = custom/roles/external:custom/roles/internal
+roles_path = custom/roles/external:custom/roles/internal:/etc/ansible/roles
+
+[ssh_connection]
+pipelining = True
+control_path = /tmp/ansible-ssh-%%h-%%p-%%r
