--- a/playbook.yml
+++ b/playbook.yml
@@ -35,13 +35,11 @@
     - role: geerlingguy.dotfiles
       when: configure_dotfiles
       tags: ["dotfiles"]
-    - role: geerlingguy.mas
-      when: mas_installed_apps
-      tags: ["mas"]
+    #- role: geerlingguy.mas
+    #  when: mas_installed_apps
+    #  tags: ["mas"]
 
   tasks:
-    - include_tasks: tasks/ansible-setup.yml
-
     # - include_tasks: tasks/osx.yml
     #   when: configure_osx
     #   tags: ["osx"]
