--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -1,8 +1,14 @@
 ---
-- name: Ensure NVM is installed.
-  homebrew:
-    name: nvm
-    state: present
+# - name: nvm
+#   shell: >
+#     curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
+#   args:
+#     creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
+
+- name: source zshrc profiles
+  shell: source ~/.zshrc
+  args:
+    executable: /bin/bash
 
 - name: Install default node version.
   shell: >
@@ -16,12 +22,11 @@
   shell: >
     . {{ ansible_env.HOME }}/.nvm/nvm.sh && nvm alias default {{ node_default_version }}
   changed_when: false
-
-- name: Install global NPM packages.
-  npm:
-    name: "{{ item.name | default(item) }}"
-    state: "{{ item.state | default('present') }}"
-    version: "{{ item.version | default(omit) }}"
-    global: yes
-    executable: "{{ item.executable | default(omit) }}"
-  with_items: "{{ npm_packages }}"
+# - name: Install global NPM packages.
+#   npm:
+#     name: "{{ item.name | default(item) }}"
+#     state: "{{ item.state | default('present') }}"
+#     version: "{{ item.version | default(omit) }}"
+#     global: yes
+#     executable: ". {{ ansible_env.HOME }}/.nvm/nvm.sh && {{ ansible_env.HOME }}/.nvm/versions/node/v{{ node_default_version }}/bin/npm"
+#   with_items: "{{ npm_packages }}"
