--- a/playbook.yml
+++ b/playbook.yml
@@ -29,20 +29,23 @@
 
   roles:
     - role: terminal
+      when: configure_terminal
       tags: ["terminal"]
-    - role: geerlingguy.homebrew
+    - role: danbohea.homebrew
       tags: ["homebrew"]
     - role: geerlingguy.dotfiles
       when: configure_dotfiles
       tags: ["dotfiles"]
     - role: geerlingguy.mas
-      when: mas_installed_apps
       tags: ["mas"]
 
   tasks:
     # - include_tasks: tasks/osx.yml
     #   when: configure_osx
     #   tags: ["osx"]
+
+    - include_tasks: tasks/homebrew.yml
+      tags: ["homebrew"]
 
     - include_tasks: tasks/node.yml
       tags: ["node"]
