--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -1,14 +1,11 @@
 ---
-# - name: nvm
-#   shell: >
-#     curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
-#   args:
-#     creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
-
-- name: source zshrc profiles
-  shell: source ~/.zshrc
+- name: Install nvm
+  shell: >
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
   args:
     executable: /bin/bash
+    chdir: "{{ ansible_env.HOME }}"
+    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
 
 - name: Install default node version.
   shell: >
@@ -22,11 +19,17 @@
   shell: >
     . {{ ansible_env.HOME }}/.nvm/nvm.sh && nvm alias default {{ node_default_version }}
   changed_when: false
-# - name: Install global NPM packages.
-#   npm:
-#     name: "{{ item.name | default(item) }}"
-#     state: "{{ item.state | default('present') }}"
-#     version: "{{ item.version | default(omit) }}"
-#     global: yes
-#     executable: ". {{ ansible_env.HOME }}/.nvm/nvm.sh && {{ ansible_env.HOME }}/.nvm/versions/node/v{{ node_default_version }}/bin/npm"
-#   with_items: "{{ npm_packages }}"
+
+- name: List installed npm packages.
+  shell: >
+    . {{ ansible_env.HOME }}/.nvm/nvm.sh && {{ ansible_env.HOME }}/.nvm/versions/node/v{{ node_default_version }}/bin/npm -g list --depth=0
+  register: npm_list
+  check_mode: false
+  changed_when: false
+
+- name: Install global npm packages.
+  shell: >
+    . {{ ansible_env.HOME }}/.nvm/nvm.sh && {{ ansible_env.HOME }}/.nvm/versions/node/v{{ node_default_version }}/bin/npm -g i {{ item }}
+  with_items: "{{ npm_packages }}"
+  when: (item | string) not in npm_list.stdout
+
