chore: update ansible required version

--- a/tasks/post/ssh.yml
+++ b/tasks/post/ssh.yml
@@ -19,13 +19,15 @@
     src: "config.j2"
     dest: "{{ ansible_env.HOME }}/.ssh/config"
     mode: "0600"
-  when: configure_ssh and ssh_keys | bool
+  when: configure_ssh
 
 - name: Enable ssh agent
   shell: eval `ssh-agent -s`
   changed_when: false
+  when: configure_ssh
 
 - name: Add ssh private keys to ssh agent
   shell: "ssh-add -K {{ ansible_env.HOME }}/.ssh/{{item.name}}"
   with_items: "{{ ssh_keys }}"
   changed_when: false
+  when: configure_ssh
