--- a/tasks/post/ssh.yml
+++ b/tasks/post/ssh.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure ~/.ssh existsssss
+- name: Ensure ~/.ssh exists
   file:
     path: "{{ ansible_env.HOME }}/.ssh"
     state: directory
