--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,10 @@
 [defaults]
-roles_path = custom/roles/external:custom/roles/internal:/etc/ansible/roles
+inventory = hosts
+roles_path = roles
+retry_files_save_path = .ansible
+
+[privilege_escalation]
+become_ask_pass = True
 
 [ssh_connection]
 pipelining = True
