--- a/default.config.yml
+++ b/default.config.yml
@@ -1,21 +1,42 @@
 ---
-downloads: ~/.ansible-downloads/
+####################################################################
+### Role: Settings
 
-configure_dotfiles: yes
+# Hostname
+computername: GP’s MacBook Pro
+hostname: null
+
+# finder_proxy_icon_hover_delay: null
+
+# Safari
+safari_show_full_url_in_address_bar: yes
+safari_open_safe_files_automatically: no
+safari_show_status_bar: yes
+safari_show_developer_menu: yes
+
+# System
+system_save_application_state_on_quit: no
+system_expand_save_panel_by_default: yes
+system_expand_print_panel_by_default: yes
+system_show_file_extensions_warning: no
+system_warn_before_emptying_the_trash: yes
+system_use_f_keys_as_standard_function_keys: null
+system_index_network_storage_with_spotlight: no
+
+# Screen
+screensaver_ask_for_password: true
+screensaver_ask_for_password_in_seconds: 5
+
+# Dock
+dock_make_hidden_apps_translucent: true
+dock_show_indicator_lights_for_open_apps: true
+dock_tilesize: 40
+
+# Trackpad
+trackpad_tap_to_click: true
+
+# Ssh
 configure_ssh: yes
-configure_terminal: yes
-# configure_osx: yes
-
-dotfiles_repo: https://github.com/gperdomor/dotfiles.git
-# dotfiles_repo_ssh: git@github.com:gperdomor/dotfiles.git
-dotfiles_repo_accept_hostkey: yes
-dotfiles_repo_local_destination: ~/.dotfiles
-dotfiles_files:
-  - .gitconfig
-  - .gitignore
-  - .npmrc
-  - .zshrc
-
 ssh_keys:
   []
   # - name: "example"
@@ -27,15 +48,82 @@ ssh_keys:
   #   type: "rsa"
   #   comment: "some comment"
 
-# See `geerlingguy.mas` role documentation for usage instructions.
-mas_email: ""
-mas_password: ""
-mas_installed_apps:
+####################################################################
+### Role: Homebrew
+
+homebrew_taps:
+  - AdoptOpenJDK/openjdk
+  - aws/tap
+  - heroku/brew
+  - homebrew/cask-fonts
+  - kylef/formulae
+  - mongodb/brew
+  - vapor/tap
+
+homebrew_apps:
+  # - adoptopenjdk/openjdk/adoptopenjdk8
+  # - alfred
+  - araxis-merge
+  # - bartender
+  # - cardhop
+  # - cleanmymac
+  # - daisydisk
+  # - discord
+  - docker
+  # - dropbox
+  # - figma
+  - font-cascadia
+  - font-jetbrains-mono
+  - google-chrome
+  - gpg-suite
+  - iina
+  # - imageoptim
+  # - insomnia
+  # - insomnia-designer
+  # - knuff
+  - microsoft-edge
+  # - navicat-premium
+  - ngrok
+  - p4v
+  # - parallels
+  - postman
+  - tableplus
+  - tower
+  - transmission
+  - visual-studio-code
+  # - vmware-fusion
+  # - xscope
+  # - zoom
+
+homebrew_packages:
+  - diff-so-fancy
+  - git
+  - git-lfs
+  # - gitlab-runner
+  - heroku
+  - httpie
+  - jq
+  - minikube
+  # - rbenv
+  # - ruby-build
+  - ssh-copy-id
+  # - swiftenv
+  # - swiftformat
+  # - swiftlint
+  - tree
+  - watchman
+  - wget
+
+####################################################################
+### Role: MAS
+
+mas_apps:
   - { name: "1Password 7", id: 1333542190 }
   # - { name: "Affinity Designer", id: 824171161 }
   # - { name: "Affinity Photo", id: 824183456 }
   - { name: "Agenda", id: 1287445660 }
   - { name: "Amphetamine", id: 937984704 }
+  - { name: "Craft", id: 1487937127 }
   - { name: "Keynote", id: 409183694 }
   - { name: "Magnet", id: 441258766 }
   - { name: "Money", id: 1185488696 }
@@ -50,107 +138,11 @@ mas_installed_apps:
   - { name: "Twitter", id: 1482454543 }
   - { name: "Xcode", id: 497799835 }
 
-homebrew_taps:
-  - AdoptOpenJDK/openjdk
-  - azure/draft
-  - heroku/brew
-  - homebrew/cask
-  - homebrew/cask-fonts
-  - homebrew/core
-  - kylef/formulae
-  - microsoft/git
-  - vapor/tap
+####################################################################
+### Role: NVM
 
-homebrew_uninstalled_packages: []
-homebrew_installed_packages:
-  - diff-so-fancy
-  - git
-  # - gitlab-runner
-  # - gpg
-  - heroku
-  - httpie
-  - minikube
-  # - rbenv
-  # - ruby-build
-  - ssh-copy-id
-  # - swiftenv
-  # - swiftformat
-  # - swiftlint
-  - tree
-  # - watchman
-  - wget
-
-homebrew_cask_appdir: /Applications
-homebrew_cask_accept_external_apps: false
-homebrew_cask_uninstalled_apps: []
-homebrew_cask_apps:
-  - adoptopenjdk/openjdk/adoptopenjdk8
-  - araxis-merge
-  # - cleanmymac
-  # - daisydisk
-  # - discord
-  - docker
-  # - dockstation
-  # - dropbox
-  - figma
-  - font-cascadia
-  - font-jetbrains-mono
-  - google-chrome
-  - gpg-suite
-  - iina
-  # - imageoptim
-  - insomnia
-  - insomnia-designer
-  # - kaleidoscope
-  # - keepingyouawake
-  # - knuff
-  - microsoft-edge
-  # - navicat-premium
-  - ngrok
-  - p4v
-  # - parallels
-  # - postman
-  - tableplus
-  - tower
-  - transmission
-  - visual-studio-code
-  # - vlc
-  # - vmware-fusion
-  # - xscope
-
-# osx_script: "~/.osx --no-restart"
-
-projects_oss:
-  - dest: "macOS-ansible"
-    repo: "https://github.com/gperdomor/macOS-ansible.git"
-    repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
-
-projects_internal:
-  - dest: "macOS-ansible"
-    repo: "https://github.com/gperdomor/macOS-ansible.git"
-    repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
-
-projects_client:
-  - dest: "macOS-ansible"
-    repo: "https://github.com/gperdomor/macOS-ansible.git"
-    repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
-
-# Install packages from other package managers.
-# Note: You are responsible for making sure the required package managers are
-# installed, eg. through homebrew.
-composer_packages:
-  []
-  # - name: drush
-  #   state: present # present/absent, default: present
-  #   version: "^8.1" # default: N/A
-
-gem_packages:
-  []
-  # - name: bundler
-  #   state: present # present/absent/latest, default: present
-  #   version: "~> 1.15.1" # default: N/A
-
-node_default_version: 14.15.4
+nvm_version: 0.37.2
+node_version: 15.8.0
 npm_packages:
   - "@angular/cli"
   - "@electron-forge/cli"
@@ -165,19 +157,17 @@ npm_packages:
   - oclif
   - prettier
   - verdaccio
-  # - name: webpack
-  #   state: present # present/absent/latest, default: present
-  #   version: "^2.6" # default: N/A
 
-pip_packages:
-  []
-  # - name: mkdocs
-  #   state: present # present/absent/latest, default: present
-  #   version: "0.16.3" # default: N/A
+####################################################################
+### Role: dotfiles
 
-# Glob pattern to ansible task files to run after all other tasks are finished.
-post_provision_tasks:
-  - tasks/post/ssh.yml
-  - tasks/post/projects.yml
-  - tasks/post/tower.yml
-  - tasks/post/transmission.yml
+configure_dotfiles: yes
+dotfiles_repo: https://github.com/gperdomor/dotfiles.git
+dotfiles_repo_version: master
+dotfiles_repo_accept_hostkey: false
+dotfiles_repo_local_destination: ~/.dotfiles
+dotfiles_files:
+  - .gitconfig
+  - .gitignore
+  - .npmrc
+  - .zshrc
